--- a/rebar.config
+++ b/rebar.config
@@ -8,7 +8,7 @@
             ]}.
 
 {xref_checks, [undefined_function_calls]}.
-{cover_enabled, true}.
+{cover_enabled, false}.
 {sub_dirs, ["rel"]}.
 
 {edoc_opts, [{dialyzer_specs, all}, 
@@ -25,10 +25,10 @@
 
 {deps, [
         %%% TEST %%%
-        {covertool,
-         ".*", 
-         {git, "git://github.com/idubrov/covertool.git",
-         {branch, "master"}}},
+        {meck, 
+         "0.8.*",
+         {git, "git://github.com/eproxus/meck.git", 
+          {tag, "0.8.1"}}},
 
         {edown,
          ".*",
@@ -36,13 +36,3 @@
           {branch, "master"}}}
        ]}.
 
-% --------------------------------TEST--------------------------------------
-{eunit_opts, [{report, {eunit_surefire, [{dir, "."}]}}]}.
-{export, "all.coverdata"}.
-
-{plugins, [rebar_covertool]}.
- {cover_export_enabled, true}.
- {covertool_eunit, {".eunit/eunit.coverdata", "eunit.coverage.xml"}}.
- {covertool_ct, {"ct.coverdata", "ct.coverage.xml"}}.
- {covertool_prefix_len, 2}.
-% --------------------------------------------------------------------------
