firmata digital message and analog message

--- a/rebar.config
+++ b/rebar.config
@@ -24,15 +24,19 @@
 {port_specs, [{"priv/rgpio_lib", ["c_src/rgpio_lib.c"] }]}.
 
 {deps, [
+        {'erlang-serial',
+         "1.*",
+         {git, "https://github.com/tonyg/erlang-serial.git", 
+          {branch, "master"}}},
+
         %%% TEST %%%
         {meck, 
          "0.8.*",
-         {git, "git://github.com/eproxus/meck.git", 
+         {git, "https://github.com/eproxus/meck.git", 
           {tag, "0.8.1"}}},
 
         {edown,
          ".*",
-         {git, "git://github.com/esl/edown.git", 
+         {git, "https://github.com/esl/edown.git", 
           {branch, "master"}}}
        ]}.
-
