hange app name to marionet

--- a/rebar.config
+++ b/rebar.config
@@ -21,7 +21,7 @@
 
 %% clang port driver compile options. 
 {port_env, [{"LDFLAGS", "$LDFLAGS -pthread"}]}.
-{port_specs, [{"priv/rgpio_lib", ["c_src/rgpio_lib.c"] }]}.
+{port_specs, [{"priv/gpio_lib", ["c_src/gpio_lib.c"] }]}.
 
 {deps, [
         {'erlang-serial',
@@ -35,6 +35,7 @@
          {git, "https://github.com/eproxus/meck.git", 
           {tag, "0.8.1"}}},
 
+        %%% DOC  %%%
         {edown,
          ".*",
          {git, "https://github.com/esl/edown.git", 
