fix for rename repository

--- a/rebar.config
+++ b/rebar.config
@@ -26,7 +26,7 @@
 {deps, [
         {'erlang-serial',
          "1.*",
-         {git, "https://github.com/tonyg/erlang-serial.git", 
+         {git, "https://github.com/hiroeorz/erlang-serial.git", 
           {branch, "master"}}},
 
         %%% TEST %%%
