--- a/rebar.config
+++ b/rebar.config
@@ -3,8 +3,9 @@
 
 {erl_opts, [warnings_as_errors,
             warn_export_all,
-            warn_unused_import
+            warn_unused_import,
             %warn_untyped_record covertool
+            {parse_transform, lager_transform}
             ]}.
 
 {xref_checks, [undefined_function_calls]}.
@@ -24,20 +25,17 @@
 {port_specs, [{"priv/gpio_lib", ["c_src/gpio_lib.c"] }]}.
 
 {deps, [
-        {'erlang-serial',
-         "1.*",
+        {lager, "2.*", {git, "https://github.com/basho/lager.git"}},
+
+        {'erlang-serial', "1.*",
          {git, "https://github.com/hiroeorz/erlang-serial.git", 
           {branch, "master"}}},
 
         %%% TEST %%%
-        {meck, 
-         "0.8.*",
-         {git, "https://github.com/eproxus/meck.git", 
-          {tag, "0.8.1"}}},
+        {meck, "0.8.*", {git, "https://github.com/eproxus/meck.git", 
+                         {tag, "0.8.1"}}},
 
         %%% DOC  %%%
-        {edown,
-         ".*",
-         {git, "https://github.com/esl/edown.git", 
-          {branch, "master"}}}
+        {edown, ".*", {git, "https://github.com/esl/edown.git", 
+                       {branch, "master"}}}
        ]}.
