--- a/rebar.config
+++ b/rebar.config
@@ -27,7 +27,7 @@
 {deps, [
         {lager, "2.*", {git, "https://github.com/basho/lager.git"}},
 
-        {'erlang-serial', "1.*",
+        {serial, "1.*",
          {git, "https://github.com/hiroeorz/erlang-serial.git", 
           {branch, "master"}}},
 
