--- a/rel/marionet-device-001/files/sys.config
+++ b/rel/marionet-device-001/files/sys.config
@@ -22,14 +22,14 @@
    %%    pull       :: up      | down   | none
    %%    active_low :: true    | false  | undefined
    {gpio, [
-           { 4, in,  [{edge, both}, {pull, up}, {active_low, true}] }
-           %{17, in,  [{edge, both}, {pull, up}, {active_low, true}] },
-           %{18, in,  [{edge, both}, {pull, up}, {active_low, true}] },
-           %{22, in,  [{edge, both}, {pull, up}, {active_low, true}] },
-           %{23, in,  [{edge, both}, {pull, up}, {active_low, true}] },
-           %{24, in,  [{edge, both}, {pull, up}, {active_low, true}] },
-           %{25, out, [{edge, both}, {pull, down}] },
-           %{27, out, [{edge, both}, {pull, down}] }
+           { 4, in,  [{edge, both}, {pull, up}, {active_low, true}] },
+           {17, in,  [{edge, both}, {pull, up}, {active_low, true}] },
+           {18, in,  [{edge, both}, {pull, up}, {active_low, true}] },
+           {22, in,  [{edge, both}, {pull, up}, {active_low, true}] },
+           {23, in,  [{edge, both}, {pull, up}, {active_low, true}] },
+           {24, in,  [{edge, both}, {pull, up}, {active_low, true}] },
+           {25, out, [{edge, both}, {pull, down}] },
+           {27, out, [{edge, both}, {pull, down}] }
           ]},
    
    %% arduino extend setting.
