--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ eunit.coverage.xml
 priv/rgpio_lib
 c_src/*.o
 rel/marionet-device-001/marionet-device-001
+rel/marionet-device-002/marionet-device-002/
