--- a/rebar.config
+++ b/rebar.config
@@ -20,22 +20,16 @@
 
 {validate_app_modules, true}.
 
-%% clang port driver compile options. 
-{port_env, [{"LDFLAGS", "$LDFLAGS -pthread"}]}.
-{port_specs, [{"priv/gpio_lib", ["c_src/gpio_lib.c"] }]}.
-
 {deps, [
-        {lager, "2.*", {git, "https://github.com/basho/lager.git"}},
+        {lager, "2.*", 
+         {git, "https://github.com/basho/lager.git"}},
 
-        {serial, "1.*",
-         {git, "https://github.com/hiroeorz/erlang-serial.git", 
-          {branch, "master"}}},
+        {gpio, "0.*", 
+         {git, "https://github.com/hiroeorz/gpio-erlang.git"}},
 
-        %%% TEST %%%
-        {meck, "0.8.*", {git, "https://github.com/eproxus/meck.git", 
-                         {tag, "0.8.1"}}},
+        {arduino, "0.*", 
+         {git, "https://github.com/hiroeorz/arduino-erlang.git"}},
 
-        %%% DOC  %%%
         {edown, ".*", {git, "https://github.com/esl/edown.git", 
                        {branch, "master"}}}
        ]}.
