--- a/rel/marionet-device-001/reltool.config
+++ b/rel/marionet-device-001/reltool.config
@@ -40,6 +40,8 @@
        {app, lager, [{incl_cond, include}]},
        {app, goldrush, [{incl_cond, include}]},
        {app, serial, [{incl_cond, include}]},
+       {app, gpio, [{incl_cond, include}]},
+       {app, arduino, [{incl_cond, include}]},
        {app, marionet_device, [{incl_cond, include},{lib_dir, "../.."}]}
       ]}.
 
