--- a/rebar.config
+++ b/rebar.config
@@ -24,6 +24,12 @@
         {lager, "2.*", 
          {git, "https://github.com/basho/lager.git"}},
 
+        {msgpack, ".*",
+         {git, "https://github.com/msgpack/msgpack-erlang.git", "master"}},
+
+        {emqttc, "0.*",
+         {git, "https://github.com/hiroeorz/emqttc.git", "master"}},
+
         {gpio, "0.*", 
          {git, "https://github.com/hiroeorz/gpio-erlang.git"}},
 
