--- a/rel/marionet-device-001/files/sys.config
+++ b/rel/marionet-device-001/files/sys.config
@@ -5,11 +5,16 @@
  {marionet_device, 
   [
    {device_id, 1},
-   {token, "0A49FC883014791A7B964B544DC27152"},
-
-   {server_ip_address, "marionet.io"},
-   {server_port, 8765},
-
+   {mqtt_broker, [{host, "test.mosquitto.org"},
+                  {port, 1883},
+                  {username, undefined},
+                  {password, undefined}
+                 ]},
+   
+   {subscribes, [{<<"marionet/2/analog/0">>,  0},
+                 {<<"marionet/2/digital/0">>, 1}
+                ]},
+   
    %% driver node node name
    %% c1@ is fixed. change your hostname part of 'raspberrypi'.
    {c_node, c1@raspberrypi},
