--- a/rel/marionet-device-002/files/sys.config
+++ b/rel/marionet-device-002/files/sys.config
@@ -5,10 +5,15 @@
  {marionet_device, 
   [
    {device_id, 2},
-   {token, "15ED18ABD995E43E781BB979DAF7D8B0"},
-
-   {server_ip_address, "marionet.io"},
-   {server_port, 8765},
+   {mqtt_broker, [{host, "test.mosquitto.org"},
+                  {port, 1883},
+                  {username, undefined},
+                  {password, undefined}
+                 ]},
+   
+   {subscribes, [{<<"marionet/1/analog/0">>,  0},
+                 {<<"marionet/1/digital/0">>, 1}
+                ]},
 
    %% driver node node name
    %% c1@ is fixed. change your hostname part of 'raspberrypi'.
