--- a/rel/marionet-device-002/reltool.config
+++ b/rel/marionet-device-002/reltool.config
@@ -14,6 +14,7 @@
 	 compiler,
 	 lager,
 	 serial,
+	 emqttc,
          marionet_device
         ]},
        {rel, "start_clean", "",
@@ -40,6 +41,8 @@
        {app, lager, [{incl_cond, include}]},
        {app, goldrush, [{incl_cond, include}]},
        {app, serial, [{incl_cond, include}]},
+       {app, msgpack, [{incl_cond, include}]},
+       {app, emqttc, [{incl_cond, include}]},
        {app, gpio, [{incl_cond, include}]},
        {app, arduino, [{incl_cond, include}]},
        {app, marionet_device, [{incl_cond, include},{lib_dir, "../.."}]}
