--- a/rebar.config
+++ b/rebar.config
@@ -36,6 +36,9 @@
         {arduino, "0.*", 
          {git, "https://github.com/hiroeorz/arduino-erlang.git"}},
 
+        {omron_fins, "1.*", 
+         {git, "https://github.com/hiroeorz/omron-fins-erlang.git"}},
+
         {edown, ".*", {git, "https://github.com/esl/edown.git", 
                        {branch, "master"}}}
        ]}.
