add omron_fins to release file

--- a/rel/marionet-device-001/reltool.config
+++ b/rel/marionet-device-001/reltool.config
@@ -15,6 +15,7 @@
 	 lager,
 	 serial,
 	 emqttc,
+	 omron_fins,
          marionet_device
         ]},
        {rel, "start_clean", "",
@@ -43,6 +44,7 @@
        {app, serial, [{incl_cond, include}]},
        {app, msgpack, [{incl_cond, include}]},
        {app, emqttc, [{incl_cond, include}]},
+       {app, omron_fins, [{incl_cond, include}]},
        {app, gpio, [{incl_cond, include}]},
        {app, arduino, [{incl_cond, include}]},
        {app, marionet_device, [{incl_cond, include},{lib_dir, "../.."}]}
