--- a/rel/marionet-device-001/reltool.config
+++ b/rel/marionet-device-001/reltool.config
@@ -16,6 +16,7 @@
 	 serial,
 	 emqttc,
 	 omron_fins,
+	 ossp_uuid,
          marionet_device
         ]},
        {rel, "start_clean", "",
@@ -47,6 +48,7 @@
        {app, omron_fins, [{incl_cond, include}]},
        {app, gpio, [{incl_cond, include}]},
        {app, arduino, [{incl_cond, include}]},
+       {app, ossp_uuid, [{incl_cond, include}]},
        {app, marionet_device, [{incl_cond, include},{lib_dir, "../.."}]}
       ]}.
 
