fix release file 002

--- a/rel/marionet-device-002/reltool.config
+++ b/rel/marionet-device-002/reltool.config
@@ -48,6 +48,7 @@
        {app, omron_fins, [{incl_cond, include}]},
        {app, gpio, [{incl_cond, include}]},
        {app, arduino, [{incl_cond, include}]},
+       {app, ossp_uuid, [{incl_cond, include}]},
        {app, marionet_device, [{incl_cond, include},{lib_dir, "../.."}]}
       ]}.
 
