--- a/rel/marionet-device-001/files/sys.config
+++ b/rel/marionet-device-001/files/sys.config
@@ -32,7 +32,7 @@
            {18, in,  [{edge, both}, {pull, up}, {active_low, true}] },
            {22, in,  [{edge, both}, {pull, up}, {active_low, true}] },
            {23, in,  [{edge, both}, {pull, up}, {active_low, true}] },
-           {24, in,  [{edge, both}, {pull, up}, {active_low, true}] },
+           {24, out, [{edge, both}, {pull, down}] },
            {25, out, [{edge, both}, {pull, down}] }
           ]},
    
