change analog interval to 2900msec

--- a/rebar.config
+++ b/rebar.config
@@ -27,6 +27,9 @@
         {msgpack, ".*",
          {git, "https://github.com/msgpack/msgpack-erlang.git", "master"}},
 
+        {jsx, "1.4.*",
+         {git, "git://github.com/talentdeficit/jsx.git", {tag, "v1.4.5"}}},
+
         {emqttc, "0.*",
          {git, "https://github.com/hiroeorz/emqttc.git", "master"}},
 
