--- a/rel/marionet-device-002/reltool.config
+++ b/rel/marionet-device-002/reltool.config
@@ -44,6 +44,7 @@
        {app, goldrush, [{incl_cond, include}]},
        {app, serial, [{incl_cond, include}]},
        {app, msgpack, [{incl_cond, include}]},
+       {app, jsx, [{incl_cond, include}]},
        {app, emqttc, [{incl_cond, include}]},
        {app, omron_fins, [{incl_cond, include}]},
        {app, gpio, [{incl_cond, include}]},
