publish every 0.3sec to broker 002 device

--- a/rel/marionet-device-002/files/sys.config
+++ b/rel/marionet-device-002/files/sys.config
@@ -40,11 +40,11 @@
    {arduino_enable, true},
    {arduino, [{speed, 57600},
               {device, "/dev/ttyACM0"},
-              {sampling_interval, 2900},
+              {sampling_interval, 300},
               {digital_port_reporting, [1, 0]},
               {digital_port_offset, 1},
               {analog_offset, 0},
-              {analog, [0] },
+              {analog, [0, 1] },
               {digital, [
                          { 0, in, [{pull, up} ]},
                          { 1, in, [{pull, up} ]},
