--- a/rel/marionet-device-002/files/sys.config
+++ b/rel/marionet-device-002/files/sys.config
@@ -11,8 +11,8 @@
                   {password, undefined}
                  ]},
    
-   {subscribes, [{<<"marionet/1/analog/0">>,  0},
-                 {<<"marionet/1/digital/0">>, 0}
+   {subscribes, [{<<"marionet/+/analog/#">>,  0},
+                 {<<"marionet/+/digital/#">>, 0}
                 ]},
 
    %% driver node node name
