change subscribe path

--- a/rel/marionet-device-002/files/sys.config
+++ b/rel/marionet-device-002/files/sys.config
@@ -11,8 +11,8 @@
                   {password, undefined}
                  ]},
    
-   {subscribes, [{<<"marionet/+/analog/#">>,  0},
-                 {<<"marionet/+/digital/#">>, 1}
+   {subscribes, [{<<"marionet/1/analog/#">>,  0},
+                 {<<"marionet/1/digital/#">>, 1}
                 ]},
 
    %% driver node node name
