use analog1 in 002 device

--- a/rel/marionet-device-001/files/sys.config
+++ b/rel/marionet-device-001/files/sys.config
@@ -44,7 +44,7 @@
               {digital_port_reporting, [1, 0]},
               {digital_port_offset, 1},
               {analog_offset, 0},
-              {analog, [0] },
+              {analog, [0, 1] },
               {digital, [
                          { 0, in, [{pull, up} ]},
                          { 1, in, [{pull, up} ]},
