configurable subscribe_event_handler and io_event_handler

--- a/rebar.config
+++ b/rebar.config
@@ -42,6 +42,7 @@
         {omron_fins, "1.*", 
          {git, "https://github.com/hiroeorz/omron-fins-erlang.git"}},
 
-        {edown, ".*", {git, "https://github.com/esl/edown.git", 
-                       {branch, "master"}}}
+        {edown, ".*",
+         {git, "https://github.com/esl/edown.git", 
+          {branch, "master"}}}
        ]}.
