start sub string from /

--- a/rel/marionet-device-001/files/sys.config
+++ b/rel/marionet-device-001/files/sys.config
@@ -14,8 +14,8 @@
    {io_event_handler,        sample_io_event_handler},
    {subscribe_event_handler, sample_sub_handler},
    
-   {subscribes, [{<<"marionet/2/analog/0">>,  0},
-                 {<<"marionet/2/digital/0">>, 1}
+   {subscribes, [{<<"/marionet/2/analog/0">>,  0},
+                 {<<"/marionet/2/digital/0">>, 1}
                 ]},
    
    %% driver node node name
