--- a/rel/marionet-device-002/files/sys.config
+++ b/rel/marionet-device-002/files/sys.config
@@ -14,8 +14,8 @@
    {io_event_handler,        sample_io_event_handler},
    {subscribe_event_handler, sample_sub_handler},
    
-   {subscribes, [{<<"marionet/1/analog/#">>,  0},
-                 {<<"marionet/1/digital/#">>, 1}
+   {subscribes, [{<<"/marionet/1/analog/#">>,  0},
+                 {<<"/marionet/1/digital/#">>, 1}
                 ]},
 
    %% driver node node name
