--- a/rel/marionet-device-001/files/sys.config
+++ b/rel/marionet-device-001/files/sys.config
@@ -5,6 +5,8 @@
  {marionet_device, 
   [
    {device_id, 1},
+   {group_id, <<"your_group_id">>},
+   
    {mqtt_broker, [{host, "test.mosquitto.org"},
                   {port, 1883},
                   {username, undefined},
@@ -14,8 +16,8 @@
    {io_event_handler,        sample_io_event_handler},
    {subscribe_event_handler, sample_sub_handler},
    
-   {subscribes, [{<<"/marionet/2/analog/0">>,  0},
-                 {<<"/marionet/2/digital/0">>, 1}
+   {subscribes, [{<<"/your_group_id/2/analog/0">>,  0},
+                 {<<"/your_group_id/2/digital/0">>, 1}
                 ]},
    
    %% driver node node name
