--- a/rel/marionet-device-002/files/sys.config
+++ b/rel/marionet-device-002/files/sys.config
@@ -5,6 +5,8 @@
  {marionet_device, 
   [
    {device_id, 2},
+   {group_id, <<"your_group_id">>},
+
    {mqtt_broker, [{host, "test.mosquitto.org"},
                   {port, 1883},
                   {username, undefined},
@@ -14,8 +16,8 @@
    {io_event_handler,        sample_io_event_handler},
    {subscribe_event_handler, sample_sub_handler},
    
-   {subscribes, [{<<"/marionet/1/analog/#">>,  0},
-                 {<<"/marionet/1/digital/#">>, 1}
+   {subscribes, [{<<"/your_group_id/1/analog/#">>,  0},
+                 {<<"/your_group_id/1/digital/#">>, 1}
                 ]},
 
    %% driver node node name
