--- a/rel/marionet-device-001/files/sys.config
+++ b/rel/marionet-device-001/files/sys.config
@@ -14,7 +14,7 @@
                  ]},
 
    {io_event_handler,        sample_io_event_handler},
-   {subscribe_event_handler, sample_sub_handler},
+   {subscribe_event_handler, sample_sub_event_handler},
    
    {subscribes, [{<<"/your_group_id/2/analog/0">>,  0},
                  {<<"/your_group_id/2/digital/0">>, 1}
