--- a/rel/marionet-device-001/files/sys.config
+++ b/rel/marionet-device-001/files/sys.config
@@ -4,7 +4,7 @@
 [
  {marionet_device, 
   [
-   {device_id, 1},
+   {device_id, <<"device001">>},
    {group_id, <<"your_group_id">>},
    
    {mqtt_broker, [{host, "test.mosquitto.org"},
@@ -16,8 +16,8 @@
    {io_event_handler,        sample_io_event_handler},
    {subscribe_event_handler, sample_sub_event_handler},
    
-   {subscribes, [{<<"/your_group_id/2/analog/0">>,  0},
-                 {<<"/your_group_id/2/digital/0">>, 1}
+   {subscribes, [{<<"/your_group_id/device002/analog/0">>,  0},
+                 {<<"/your_group_id/device002/digital/0">>, 1}
                 ]},
    
    %% driver node node name
