--- a/rel/marionet-device-002/files/sys.config
+++ b/rel/marionet-device-002/files/sys.config
@@ -4,7 +4,7 @@
 [
  {marionet_device, 
   [
-   {device_id, 2},
+   {device_id, <<"device002">>},
    {group_id, <<"your_group_id">>},
 
    {mqtt_broker, [{host, "test.mosquitto.org"},
@@ -16,8 +16,8 @@
    {io_event_handler,        sample_io_event_handler},
    {subscribe_event_handler, sample_sub_event_handler},
    
-   {subscribes, [{<<"/your_group_id/1/analog/#">>,  0},
-                 {<<"/your_group_id/1/digital/#">>, 1}
+   {subscribes, [{<<"/your_group_id/device001/analog/#">>,  0},
+                 {<<"/your_group_id/device001/digital/#">>, 1}
                 ]},
 
    %% driver node node name
