set mqtt client_id

--- a/rel/marionet-device-002/files/sys.config
+++ b/rel/marionet-device-002/files/sys.config
@@ -9,6 +9,7 @@
 
    {mqtt_broker, [{host, "test.mosquitto.org"},
                   {port, 1883},
+                  {client_id, <<"your_group_id/device002">>}, %% len < 24
                   {username, undefined},
                   {password, undefined}
                  ]},
