--- a/rel/marionet-device-002/files/sys.config
+++ b/rel/marionet-device-002/files/sys.config
@@ -60,13 +60,13 @@
                          { 5, in, [{pull, up} ]},
                          { 6, in, [{pull, up} ]},
                          { 7, in, [{pull, up} ]},
-                         
-                         { 8, out},
-                         { 9, out},
+
+                         { 8, servo},
+                         { 9, servo},
                          {10, pwm},
                          {11, pwm},
-                         {12, servo},
-                         {13, servo}
+                         {12, out},
+                         {13, out}
                         ]
               }
              ]},
