fix topic format

--- a/rel/marionet-device-001/files/sys.config
+++ b/rel/marionet-device-001/files/sys.config
@@ -4,12 +4,12 @@
 [
  {marionet_device, 
   [
-   {device_id, <<"device001">>},
-   {group_id, <<"your_group_id">>},
+   {device_id, <<"pi001">>},
+   {group_id, <<"demo">>},
    
    {mqtt_broker, [{host, "test.mosquitto.org"},
                   {port, 1883},
-                  {client_id, <<"your_group_id/device001">>}, %% len < 24
+                  {client_id, <<"demo/pi001">>}, %% len < 24
                   {username, undefined},
                   {password, undefined}
                  ]},
@@ -17,8 +17,8 @@
    {io_event_handler,        sample_io_event_handler},
    {subscribe_event_handler, sample_sub_event_handler},
    
-   {subscribes, [{<<"/your_group_id/device002/analog/0">>,  0},
-                 {<<"/your_group_id/device002/digital/0">>, 1}
+   {subscribes, [{<<"/demo/pi002/analog/#">>,  0},
+                 {<<"/demo/pi002/digital/#">>, 1}
                 ]},
    
    %% driver node node name
