--- a/rel/marionet-device-002/files/sys.config
+++ b/rel/marionet-device-002/files/sys.config
@@ -4,12 +4,12 @@
 [
  {marionet_device, 
   [
-   {device_id, <<"device002">>},
-   {group_id, <<"your_group_id">>},
+   {device_id, <<"pi002">>},
+   {group_id, <<"demo">>},
 
    {mqtt_broker, [{host, "test.mosquitto.org"},
                   {port, 1883},
-                  {client_id, <<"your_group_id/device002">>}, %% len < 24
+                  {client_id, <<"demo/pi002">>}, %% len < 24
                   {username, undefined},
                   {password, undefined}
                  ]},
@@ -17,8 +17,8 @@
    {io_event_handler,        sample_io_event_handler},
    {subscribe_event_handler, sample_sub_event_handler},
    
-   {subscribes, [{<<"/your_group_id/device001/analog/#">>,  0},
-                 {<<"/your_group_id/device001/digital/#">>, 1}
+   {subscribes, [{<<"/demo/pi001/analog/#">>,  0},
+                 {<<"/demo/pi001/digital/#">>, 1}
                 ]},
 
    %% driver node node name
