--- a/rel/marionet-device-001/files/sys.config
+++ b/rel/marionet-device-001/files/sys.config
@@ -16,6 +16,7 @@
 
    {io_event_handler,        sample_io_event_handler},
    {subscribe_event_handler, sample_sub_event_handler},
+   {publish_interval, 10000},
    
    {subscribes, [{<<"/demo/pi002/analog/#">>,  0},
                  {<<"/demo/pi002/digital/#">>, 1}
@@ -46,11 +47,11 @@
    {arduino_enable, true},
    {arduino, [{speed, 57600},
               {device, "/dev/ttyACM0"},
-              {sampling_interval, 2900},
+              {sampling_interval, 1000},
               {digital_port_reporting, [1, 0]},
               {digital_port_offset, 1},
               {analog_offset, 0},
-              {analog, [0, 1] },
+              {analog, [] },
               {digital, [
                          { 0, in, [{pull, up} ]},
                          { 1, in, [{pull, up} ]},
