change release config

--- a/rel/marionet-device-001/files/sys.config
+++ b/rel/marionet-device-001/files/sys.config
@@ -46,11 +46,11 @@
    {arduino_enable, true},
    {arduino, [{speed, 57600},
               {device, "/dev/ttyACM0"},
-              {sampling_interval, 1000},
+              {sampling_interval, 3000},
               {digital_port_reporting, [1, 0]},
               {digital_port_offset, 1},
               {analog_offset, 0},
-              {analog, [] },
+              {analog, [0, 1] },
               {digital, [
                          { 0, in, [{pull, up} ]},
                          { 1, in, [{pull, up} ]},
