--- a/rebar.config
+++ b/rebar.config
@@ -27,6 +27,9 @@
         {msgpack, ".*",
          {git, "https://github.com/msgpack/msgpack-erlang.git", "master"}},
 
+        {cowboy, "0.9.0",
+         {git, "https://github.com/extend/cowboy.git", {tag, "0.9.0"}}},
+
         {jsx, "1.4.*",
          {git, "git://github.com/talentdeficit/jsx.git", {tag, "v1.4.5"}}},
 
