--- a/rel/marionet-device-002/reltool.config
+++ b/rel/marionet-device-002/reltool.config
@@ -17,6 +17,9 @@
 	 emqttc,
 	 omron_fins,
 	 ossp_uuid,
+	 ranch,
+	 cowlib,
+	 cowboy,
          marionet_device
         ]},
        {rel, "start_clean", "",
@@ -50,6 +53,9 @@
        {app, gpio, [{incl_cond, include}]},
        {app, arduino, [{incl_cond, include}]},
        {app, ossp_uuid, [{incl_cond, include}]},
+       {app, ranch, [{incl_cond, include}]},
+       {app, cowlib, [{incl_cond, include}]},
+       {app, cowboy, [{incl_cond, include}]},
        {app, marionet_device, [{incl_cond, include},{lib_dir, "../.."}]}
       ]}.
 
