--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,5 @@ eunit.coverage.xml
 priv/rgpio_lib
 c_src/*.o
 rel/marionet-device-001/marionet-device-001
-rel/marionet-device-002/marionet-device-002/
+rel/marionet-device-002/marionet-device-002
+rel/plc/plc
