binary format plc ipaddress available

--- a/rel/plc/files/sys.config
+++ b/rel/plc/files/sys.config
@@ -74,8 +74,8 @@
 
    %% omron PLC extend setting.
    {omron_fins_enable, true},
-   {omron_fins, [{ip_address,  {192,168,10,5}},
-                 {dst_address, {192,168,10,6}},
+   {omron_fins, [{ip_address,  <<"192.168.10.5">>},
+                 {dst_address, <<"192.168.10.6">>},
                  {port, 9600},
                  {check_interval, 2900},
                  {analog_offset, 1},
