--- a/rel/marionet-device-001/files/sys.config
+++ b/rel/marionet-device-001/files/sys.config
@@ -73,8 +73,8 @@
 
    %% omron PLC extend setting.
    {omron_fins_enable, false},
-   {omron_fins, [{ip_address,  {192,168,0,5}},
-                 {dst_address, {192,168,0,6}},
+   {omron_fins, [{ip_address,  <<"192,168,10,5">>},
+                 {dst_address, <<"192.168.10.6">>},
                  {port, 9600},
                  {check_interval, 2900},
                  {analog_offset, 1},
