--- a/rel/marionet-device-002/files/sys.config
+++ b/rel/marionet-device-002/files/sys.config
@@ -16,6 +16,7 @@
 
    {io_event_handler,        sample_io_event_handler},
    {subscribe_event_handler, sample_sub_event_handler},
+   {analog_publish_interval, 3000},
    
    {subscribes, [{<<"/demo/pi001/analog/#">>,  0},
                  {<<"/demo/pi001/digital/#">>, 1}
