--- a/rel/plc/files/sys.config
+++ b/rel/plc/files/sys.config
@@ -16,9 +16,12 @@
 
    {io_event_handler,        sample_io_event_handler},
    {subscribe_event_handler, sample_sub_plc_event_handler},
+   {analog_publish_interval, 3000},
    
-   {subscribes, [{<<"/demo/+/analog/#">>,  0},
-                 {<<"/demo/+/digital/#">>, 1}
+   {subscribes, [{<<"/demo/pi001/analog/#">>,  0},
+                 {<<"/demo/pi002/analog/#">>,  0},
+                 {<<"/demo/pi001/digital/#">>, 1},
+                 {<<"/demo/pi002/digital/#">>, 1}
                 ]},
 
    %% driver node node name
