add galileo board

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ c_src/*.o
 rel/marionet-device-001/marionet-device-001
 rel/marionet-device-002/marionet-device-002
 rel/plc/plc
+rel/galileo/galileo
