Galileo analog support.

--- a/rel/galileo/files/sys.config
+++ b/rel/galileo/files/sys.config
@@ -38,14 +38,18 @@
            {28,  in,  []}, %% IO4
            {17,  in,  []}, %% IO5
            {24,  in,  []}, %% IO6
-           {27,  in,  []}, %% IO7
-           {26,  in,  []}, %% IO8
+           {27,  out, [{pull, strong}]}, %% IO7
+           {26,  out, [{pull, strong}]}, %% IO8
            {19,  in,  []}, %% IO9
            {16,  in,  []}, %% IO10
            {25,  in,  []}, %% IO11
            {38,  in,  []}, %% IO12
            {39,  in,  []}  %% IO13
           ]},
+
+   %% {analog_list, [0, 1, 2, 3, 4, 5]},
+   {analog_list, [0, 1]},
+   {analog_interval, 300},
    
    %% arduino extend setting.
    {arduino_enable, false},
