--- a/rel/marionet-device-001/files/sys.config
+++ b/rel/marionet-device-001/files/sys.config
@@ -42,6 +42,9 @@
            {24, out, [{edge, both}, {pull, down}] },
            {25, out, [{edge, both}, {pull, down}] }
           ]},
+
+   {analog_list, []},
+   {analog_interval, 3000},
    
    %% arduino extend setting.
    {arduino_enable, true},
