--- a/rel/plc/files/sys.config
+++ b/rel/plc/files/sys.config
@@ -45,6 +45,9 @@
            {130, out, [] },
            {131, out, [] }
           ]},
+
+   {analog_list, []},
+   {analog_interval, 3000},
    
    %% arduino extend setting.
    {arduino_enable, false},
