add dependency to erlzmq.

--- a/rebar.config
+++ b/rebar.config
@@ -36,6 +36,9 @@
         {emqttc, "0.*",
          {git, "https://github.com/hiroeorz/emqttc.git", "master"}},
 
+        {erlzmq, "3.*",
+         {git, "https://github.com/zeromq/erlzmq2.git", "master"}},
+
         {gpio, "0.*", 
          {git, "https://github.com/hiroeorz/gpio-erlang.git"}},
 
