--- a/rel/plc/reltool.config
+++ b/rel/plc/reltool.config
@@ -20,6 +20,7 @@
 	 ranch,
 	 cowlib,
 	 cowboy,
+	 erlzmq,
          marionet_device
         ]},
        {rel, "start_clean", "",
@@ -56,6 +57,7 @@
        {app, ranch, [{incl_cond, include}]},
        {app, cowlib, [{incl_cond, include}]},
        {app, cowboy, [{incl_cond, include}]},
+       {app, erlzmq, [{incl_cond, include}]},
        {app, marionet_device, [{incl_cond, include},{lib_dir, "../.."}]}
       ]}.
 
