config for galileo

--- a/rel/galileo/files/sys.config
+++ b/rel/galileo/files/sys.config
@@ -24,7 +24,7 @@
 
    %% driver node node name
    %% c1@ is fixed. change your hostname part of 'raspberrypi'.
-   {c_node, c1@raspberrypi},
+   {c_node, c1@localhost},
    
    %% {PinNo, ReadWriteMode, [Options]}
    %% PinNo         :: 2 .. 27
@@ -33,18 +33,20 @@
    %%    edge                :: falling | rising | both     | none
    %%    active_low          :: true    | false  | undefined
    {gpio, [
-           {14,  in,  []}, %% IO2
-           {15,  in,  []}, %% IO3
-           {28,  in,  []}, %% IO4
-           {17,  in,  []}, %% IO5
-           {24,  in,  []}, %% IO6
-           {27,  out, [{pull, strong}]}, %% IO7
-           {26,  out, [{pull, strong}]}, %% IO8
-           {19,  in,  []}, %% IO9
-           {16,  in,  []}, %% IO10
-           {25,  in,  []}, %% IO11
-           {38,  in,  []}, %% IO12
-           {39,  in,  []}  %% IO13
+           {50,  in,  [{edge, both}]},                 %% IO0
+           {51,  in,  [{edge, both}]},                 %% IO1
+           {14,  in,  []},                             %% IO2
+           {15,  in,  []},                             %% IO3
+           {28,  in,  [{edge, both}]},                 %% IO4
+           {17,  in,  [{edge, both}]},                 %% IO5
+           {24,  in,  [{edge, both}]},                 %% IO6
+           {27,  in,  [{edge, both}]},                 %% IO7
+           {26,  in,  [{edge, both}]},                 %% IO8
+           {19,  in,  [{edge, both}]},                 %% IO9
+           {16,  out, [{edge, both}, {pull, strong}]}, %% IO10
+           {25,  out, [{edge, both}, {pull, strong}]}, %% IO11
+           {38,  out, [{edge, both}, {pull, strong}]}, %% IO12
+           {39,  out, [{edge, both}, {pull, strong}]}  %% IO13
           ]},
 
    %% {analog_list, [0, 1, 2, 3, 4, 5]},
