--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,6 @@ priv/rgpio_lib
 c_src/*.o
 rel/marionet-device-001/marionet-device-001
 rel/marionet-device-002/marionet-device-002
+rel/raspberrypi/raspberrypi
 rel/plc/plc
 rel/galileo/galileo
