--- a/rel/galileo/files/sys.config
+++ b/rel/galileo/files/sys.config
@@ -24,7 +24,7 @@
 
    %% driver node node name
    %% c1@ is fixed. change your hostname part of 'raspberrypi'.
-   {c_node, c1@localhost},
+   {c_node, c1@clanton},
    
    %% {PinNo, ReadWriteMode, [Options]}
    %% PinNo         :: 2 .. 27
