mqtt enable/disable

--- a/rel/galileo/files/sys.config
+++ b/rel/galileo/files/sys.config
@@ -7,6 +7,7 @@
    {device_id, <<"galileo">>},
    {group_id, <<"demo">>},
 
+   {mqtt_enable, false},
    {mqtt_broker, [{host, "test.mosquitto.org"},
                   {port, 1883},
                   {client_id, <<"demo/galileo">>}, %% len < 24
