--- a/rel/plc/files/sys.config
+++ b/rel/plc/files/sys.config
@@ -7,6 +7,7 @@
    {device_id, <<"plc">>},
    {group_id, <<"demo">>},
 
+   {mqtt_enable, false},
    {mqtt_broker, [{host, "test.mosquitto.org"},
                   {port, 1883},
                   {client_id, <<"demo/plc">>}, %% len < 24
