--- a/rel/raspberrypi/files/sys.config
+++ b/rel/raspberrypi/files/sys.config
@@ -7,6 +7,7 @@
    {device_id, <<"pi001">>},
    {group_id, <<"demo">>},
    
+   {mqtt_enable, false},
    {mqtt_broker, [{host, "test.mosquitto.org"},
                   {port, 1883},
                   {client_id, <<"demo/pi001">>}, %% len < 24
