--- a/rebar.config
+++ b/rebar.config
@@ -31,7 +31,7 @@
          {git, "https://github.com/extend/cowboy.git", {tag, "0.9.0"}}},
 
         {jsx, "1.4.*",
-         {git, "git://github.com/talentdeficit/jsx.git", {tag, "v1.4.5"}}},
+         {git, "https://github.com/talentdeficit/jsx.git", {tag, "v1.4.5"}}},
 
         {emqttc, "0.*",
          {git, "https://github.com/hiroeorz/emqttc.git", "master"}},
