--- a/rebar.config
+++ b/rebar.config
@@ -30,11 +30,11 @@
         {cowboy, "0.9.0",
          {git, "https://github.com/extend/cowboy.git", {tag, "0.9.0"}}},
 
-        {jsx, "1.4.*",
-         {git, "https://github.com/talentdeficit/jsx.git", {tag, "v1.4.5"}}},
+        {jsx, "2.6.*",
+         {git, "https://github.com/talentdeficit/jsx.git", {tag, "v2.6.2"}}},
 
         {emqttc, "0.*",
-         {git, "https://github.com/hiroeorz/emqttc.git", "master"}},
+         {git, "https://github.com/emqtt/emqttc.git", "master"}},
 
         {erlzmq, "3.*",
          {git, "https://github.com/zeromq/erlzmq2.git", "master"}},
