--- a/rebar.config
+++ b/rebar.config
@@ -27,8 +27,8 @@
         {msgpack, ".*",
          {git, "https://github.com/msgpack/msgpack-erlang.git", "master"}},
 
-        {cowboy, "0.9.0",
-         {git, "https://github.com/extend/cowboy.git", {tag, "0.9.0"}}},
+        {cowboy, "1.0.*",
+         {git, "https://github.com/extend/cowboy.git", {tag, "1.0.1"}}},
 
         {jsx, "2.6.*",
          {git, "https://github.com/talentdeficit/jsx.git", {tag, "v2.6.2"}}},
