--- a/rel/plc/files/sys.config
+++ b/rel/plc/files/sys.config
@@ -7,7 +7,7 @@
    {device_id, <<"plc">>},
    {group_id, <<"demo">>},
 
-   {mqtt_enable, false},
+   {mqtt_enable, true},
    {mqtt_broker, [{host, "test.mosquitto.org"},
                   {port, 1883},
                   {client_id, <<"demo/plc">>}, %% len < 24
@@ -30,17 +30,7 @@
    %% Options
    %%    edge                :: falling | rising | both     | none
    %%    active_low          :: true    | false  | undefined
-   {gpio, [
-           {32,  in,  [{active_low, true}] },
-           {33,  in,  [{active_low, true}] },
-           {34,  in,  [{active_low, true}] },
-           {35,  in,  [{active_low, true}] },
-           {36,  in,  [{active_low, true}] },
-           {128, out, [] },
-           {129, out, [] },
-           {130, out, [] },
-           {131, out, [] }
-          ]},
+   {gpio, []},
 
    {analog_list, []},
    {analog_interval, 3000},
