--- a/rel/plc/reltool.config
+++ b/rel/plc/reltool.config
@@ -13,6 +13,7 @@
 	 crypto,
 	 compiler,
 	 lager,
+         gen_logger,
 	 serial,
 	 emqttc,
 	 omron_fins,
@@ -44,6 +45,7 @@
        {app, asn1, [{incl_cond, include}]},
        {app, crypto, [{incl_cond, include}]},
        {app, lager, [{incl_cond, include}]},
+       {app, gen_logger, [{incl_cond, include}]},
        {app, goldrush, [{incl_cond, include}]},
        {app, serial, [{incl_cond, include}]},
        {app, msgpack, [{incl_cond, include}]},
