--- a/rel/plc/files/sys.config
+++ b/rel/plc/files/sys.config
@@ -7,7 +7,7 @@
    {device_id, <<"plc">>},
    {group_id, <<"demo">>},
 
-   {mqtt_enable, true},
+   {mqtt_enable, false},
    {mqtt_broker, [{host, "test.mosquitto.org"},
                   {port, 1883},
                   {client_id, <<"demo/plc">>}, %% len < 24
@@ -15,7 +15,7 @@
                   {password, undefined}
                  ]},
 
-   {io_event_handler,        sample_io_event_handler},
+   %%{io_event_handler,        sample_io_event_handler},
    {analog_publish_interval, 3000},
    
    {subscribes, [{<<"/demo/pi001/analog/#">>,  0},
@@ -69,14 +69,20 @@
    {omron_fins, [{ip_address,  <<"192.168.10.5">>},
                  {dst_address, <<"192.168.10.6">>},
                  {port, 9600},
-                 {check_interval, 2900},
+                 {check_interval, 900},
                  {analog_offset, 1},
                  {digital_port_offset, 3},
-                 {analog, [0, 1, 2, 3, 4, 5]},
-                 {digital, [11, 12, 13, 14]}
-                ]}
+                 {analog, [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,
+                           20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,
+                           40]},
+                 {digital, [100,101,102,103,104,105,106,107,108,109,
+                            110,111,112,113,114,115,116,117,118,119]}
+                ]},
+
+   {zmq, [ {ip_address, <<"127.0.0.1">>}, {port, 9600} ]}
+
   ]},
 
- {lager, [ {handlers, [ {lager_console_backend, debug} ]} ]}
+  {lager, [ {handlers, [ {lager_console_backend, debug} ]} ]}
 ].
 
